--- a/assets/scss/custom/_global.scss
+++ b/assets/scss/custom/_global.scss
@@ -1,4 +1,6 @@
 html {
+    overflow-x: hidden;
+
     @include breakpoint(desktop) {
         font-size: 14px;
     }
@@ -7,6 +9,7 @@ html {
 body {
     background-color: $white;
     font-family: $mainFont;
+    position: relative;
     overflow-x: hidden;
 }
 
